Added more JS code

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -165,7 +165,105 @@
 			<section class="card" id="javascript-section">
 				<h2>JavaScript</h2>
 				<ul>
-					<li>Enter your JavaScript noted here</li>
+					<li>
+						Variable: a named container that allows us to store data in our code
+					</li>
+					<li>
+						Var = how you declare a variable, followed by an equal sign =, then
+						by the name you want to name the new variable enclosed in
+						double-quotes “ ” then a ;
+					</li>
+					<ul>
+						<li>E.g. var colour = “red”;</li>
+					</ul>
+					<li>
+						Console.log = a method that outputs a message to the web console by
+						adding an argument
+					</li>
+					<ul>
+						<li>An argument is what goes in the brackets</li>
+						<li>
+							Console refers to a test environment that developers use to check
+							out their code
+						</li>
+						<li>
+							.log() = will output whatever we add inside the parentheses to the
+							console
+						</li>
+						<li>
+							Method = a set of instructions that can be executed by a computer
+						</li>
+					</ul>
+					<li>How to link the JavaScript file to the HTML file:</li>
+					<ul>
+						<li>
+							At the bottom of the body tag, above the ending tag, add the
+							script tag
+						</li>
+						<li>In the opening tag, add the attribute src</li>
+						<li>
+							As the value for src, add the location of the JavaScript file
+						</li>
+					</ul>
+					<li>How to access the console in a webpage:</li>
+					<ul>
+						<li>Right-click > Inspect > Click the "Console" tab</li>
+					</ul>
+					<li>
+						If statements - it will check to see if the condition that we
+						provide is truthy (true)
+					</li>
+					<ul>
+						<li>
+							If the condition isn’t true or has a value that isn’t truthy
+							(false), then the computer will ignore whatever is in between the
+							curly brackets and move on.
+						</li>
+					</ul>
+					<li>Syntax: if (condition) { code }</li>
+					<li>
+						If else if statements - we can have more than one condition. If the
+						first one is false, we can add another condition
+					</li>
+					<li>Syntax: if (condition) { code } else if (condition) { code }</li>
+					<li>Difference between == and ===:</li>
+					<ul>
+						<li>== is if they equal the same, whilst === strictly compares</li>
+						<li>var a = 10, b = ‘10’ -> a == b is true but a === b is false</li>
+					</ul>
+					<li>
+						Array = a single variable that is used to hold a group of data
+					</li>
+					<ul>
+						<li>Typically used to hold data that is related in some way</li>
+						<li>
+							Arrays are not limited to contain only a single type of data
+						</li>
+						<li>
+							Declare an array using: var name_of_array = [item1, item2, …];
+						</li>
+						<li>
+							E.g. var schools = [“Belvedere Academy”, “St Margret’s”,
+							“Liverpool College”];
+						</li>
+					</ul>
+					<li>To access an item in an array: Indexing</li>
+					<ul>
+						<li>Index is the number placement the item is in the array</li>
+						<li>Indexing starts with 0 and not 1</li>
+						<li>Syntax: name_of_array[number]</li>
+						<li>E.g. schools[1] would equal “St Margret’s”</li>
+					</ul>
+					<li>
+						For loops = a loop uses the predictable pattern of indices to
+						perform a task on all the items in an array by allowing a single
+						code block to be executed over and over.
+					</li>
+					<li>
+						Function = function is simply a set of instructions that tells the
+						computer how to perform a certain task.
+					</li>
+					<li>Syntax: function function_name() { code }</li>
 				</ul>
 			</section>
 		</main>
